@@ -1,0 +1,9 @@
+include $(top_srcdir)/common/common.mk
+
+CONFIG =                  \
+        examples/pull.xml \
+        examples/push.xml
+
+EXTRA_DIST = $(CONFIG)
+
+check-local: check-local-config
