@@ -1,0 +1,15 @@
+<?xml version="1.0" ?>
+<planet>
+  <flow name="default">
+
+    <component name="wms-producer" type="windows-media-server-producer"
+               project="windowsmedia" version="0.4.2.1"
+               worker="localhost">
+      <property name="type">pull</property>
+      <!-- localhost is most likely not a Windows Media Server -->
+      <property name="host">127.0.0.1</property>
+      <property name="port">10000</property>
+    </component>
+
+  </flow>
+</planet>
